<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_to_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>