<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.LeaguesFragment">

    <ProgressBar
        android:id="@+id/pb_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:outlineSpotShadowColor="@color/colorPrimaryDark" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_league" />

</FrameLayout>